# medical-transcriber

./: .env.example  .gitignore  README.md  ecosystem.config.js  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: download_model.sh  download_sample_audio.sh  install_ollama.sh  run.sh  run_api.sh
src/: __init__.py
src/medical_stt/: __init__.py  api.py  audio_utils.py  config.py  demo.py  image_gen.py  mic_stream.py  postprocess.py  streaming.py  transcriber.py  video_gen.py
static/: image.html  index.html  video.html
tests/: conftest.py  test_audio_utils.py  test_config.py  test_postprocess.py  test_streaming.py  test_transcriber.py
